Update GrandAssemblyLine.java